<resources>
    <string name="app_name">TaskApp</string>
    <string name="logo">Logo</string>
    <string name="user">Ingrese su Email</string>
    <string name="pass">Ingrese su Contraseña</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="btnDescargar">Ver Instructivo</string>
    <string name="tvRegistro">Completar los Campos:</string>
    <string name="tvNombre">Nombre:</string>
    <string name="tvUsuario">Usuario:</string>
    <string name="tvEmail">Email:</string>
    <string name="tvContrasenia">Contraseña:</string>
    <string name="tvTitulo">Asigne un Título:</string>
    <string name="tvDescripcion">Descripción de la Tarea:</string>
    <string name="tvClima">El clima actual es BS.AS es: </string>
    <string name="edtNombreHide">Ingresa tu Nombre:</string>
    <string name="edtUsuarioHide">Ingresa tu Usuario:</string>
    <string name="edtEmailHide">Ingresa tu Email:</string>
    <string name="edtContraseniaHide">Ingresa tu Contraseña:</string>
    <string name="edtDescripcion">Explique su tarea...</string>
    <string name="edtTitle">Título</string>
    <string name="edtConecFallida">Falló la conexión, por favor intente más tarde...</string>
    <string name="btnRegistrarme">Registrarme</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnAniadir">+Crear Tarea</string>
    <string name="btnReintentarConex">Reintentar</string>



</resources>