<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Registro">

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="9dp"
        android:text="@string/btnRegistrarme"
        app:layout_constraintEnd_toEndOf="@+id/edtContrasenia"
        app:layout_constraintTop_toBottomOf="@+id/edtContrasenia" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="59dp"
        android:layout_height="19dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="74dp"
        android:layout_marginBottom="73dp"
        android:text="@string/tvNombre"
        app:layout_constraintBottom_toTopOf="@+id/tvUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRegistro" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:ems="10"
        android:hint="@string/edtNombreHide"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/tvNombre"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:text="@string/tvUsuario"
        app:layout_constraintStart_toStartOf="@+id/edtNombre"
        app:layout_constraintTop_toBottomOf="@+id/edtNombre" />

    <TextView
        android:id="@+id/tvRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="55dp"
        android:text="@string/tvRegistro"
        app:layout_constraintStart_toEndOf="@+id/tvNombre"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edtUsuarioHide"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/tvUsuario"
        app:layout_constraintTop_toBottomOf="@+id/tvUsuario" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tvEmail"
        app:layout_constraintBottom_toTopOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtEmail" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:hint="@string/edtEmailHide"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/edtUsuario"
        app:layout_constraintTop_toBottomOf="@+id/edtUsuario" />

    <EditText
        android:id="@+id/edtContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edtContraseniaHide"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/tvContrasenia"
        app:layout_constraintTop_toBottomOf="@+id/tvContrasenia" />

    <TextView
        android:id="@+id/tvContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvContrasenia"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>