<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".CrearTarea">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nueva Tarea"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="7dp"
        android:text="@string/tvTitulo"
        android:textSize="20sp"
        android:textColor="@color/editext"
        app:layout_constraintBottom_toTopOf="@+id/edtTitulo"
        app:layout_constraintStart_toStartOf="@+id/edtTitulo" />

    <EditText
        android:id="@+id/edtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/edtTitle"
        android:inputType="text"
        android:textColorHint="@color/editext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck"
        app:backgroundTint="@color/editext"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="30dp"
        android:text="@string/tvDescripcion"
        android:textColor="@color/editext"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/edtDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/edtTitulo" />

    <EditText
        android:id="@+id/edtDescripcion"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/edtDescripcion"
        android:inputType="text"
        android:textColorHint="@color/editext"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/edtTitulo"
        app:layout_constraintStart_toStartOf="@+id/edtTitulo"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:backgroundTint="@color/editext"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="25dp"
        android:text="Hora para hacer la Tarea:"
        android:textSize="20sp"
        android:textColor="@color/editext"
        app:layout_constraintBottom_toTopOf="@+id/edtHora"
        app:layout_constraintStart_toStartOf="@+id/edtHora" />

    <EditText
        android:id="@+id/edtHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="205dp"
        android:layout_marginBottom="205dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        app:backgroundTint="@color/editext"/>

    <ImageView
        android:id="@+id/pensando"
        android:layout_width="220dp"
        android:layout_height="220dp"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtHora"
        app:srcCompat="@drawable/pensando" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="83dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/custom_button"
        android:text="Guardar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnVolverMenu"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnVolverMenu"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/custom_button"
        android:text="Cancelar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGuardar" />

</androidx.constraintlayout.widget.ConstraintLayout>